--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/images/logo-agrowisata.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agrowisata Darangdan - Liburan Cerdas di Alam Terbuka | Purwakarta</title>
     <meta name="description" content="Agrowisata Darangdan adalah tempat wisata edukasi pertanian di Purwakarta. Cocok untuk keluarga dan rombongan sekolah. Reservasi mudah via WhatsApp!" />
